--- a/solidare/portal/static/portal/css/style.css
+++ b/solidare/portal/static/portal/css/style.css
@@ -374,3 +374,22 @@ button.btn:hover {
 .contact-form {
     margin-top: 30px;
 }
+
+.return-icon {
+    position: fixed !important;
+    bottom: 20px !important;
+    right: 20px !important;
+    background-color: #4a90e2;
+    color: white !important;
+    border-radius: 50%;
+    padding: 15px;
+    font-size: 22px;
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    z-index: 9999;
+    text-decoration: none;
+  }
+  
+  .return-icon:hover {
+    background-color: #357ABD;
+  }
