--- a/solidare/portal/templates/candidatos.html
+++ b/solidare/portal/templates/candidatos.html
@@ -126,7 +126,9 @@
 
 <div class="container">
     <h1>Candidatos</h1>
-
+    <a href="{% url 'pagina_professor' %}" class="home-icon">
+        <i class="fas fa-arrow-left"></i>
+      </a>  
     <table>
         <thead>
             <tr>
@@ -233,11 +235,6 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{% url 'index' %}">
-        <button type="button">Voltar para o início</button>
-    </a>
-
 </div>
 
 {% endblock %}
