--- a/solidare/portal/templates/cadastro_sucesso.html
+++ b/solidare/portal/templates/cadastro_sucesso.html
@@ -1,12 +1,13 @@
-<!-- portal/templates/cadastro_sucesso.html -->
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Sucesso!</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Sucesso!{% endblock %}
+
+{% block content %}
+    <div>
+        <a href="{% url 'index' %}" class="home-icon">
+            <i class="fas fa-home"></i>
+        </a>
+    </div>
     <h1>Cadastro realizado com sucesso!</h1>
     <p>Obrigado por se inscrever.</p>
-</body>
-</html>
+{% endblock %}
