--- a/solidare/portal/templates/candidatos.html
+++ b/solidare/portal/templates/candidatos.html
@@ -234,9 +234,13 @@
         </tbody>
     </table>
 
-    <a href="{% url 'index' %}">
-        <button type="button">Voltar para o início</button>
-    </a>
+    <button onclick="history.back()" 
+    style="position: absolute; top: 20px; left: 20px; 
+           padding: 10px 20px; font-size: 16px; 
+           background-color: #f0f0f0; border: 1px solid #ccc; 
+           border-radius: 5px; cursor: pointer;">
+    ⬅ 
+    </button>
 
 </div>
 
