--- a/solidare/portal/templates/aluno.html
+++ b/solidare/portal/templates/aluno.html
@@ -127,8 +127,9 @@
   <div class="container">
     <div class="sidebar" id="sidebar">
       <h3>Menu</h3>
-      <button onclick="window.location.href='/calendario/'">calendario</button>
+      <button onclick="window.location.href='/calendario/'">Calendário</button>
       <button onclick="window.location.href='/avisos/'">Avisos</button>
+      <button onclick="window.location.href='/chat/aluno/'">Chat</button>
     </div>
     <div class="content">
       <div class="topbar">
