--- a/solidare/portal/templates/professor.html
+++ b/solidare/portal/templates/professor.html
@@ -130,6 +130,10 @@
       <h3>Menu</h3>
       <button onclick="window.location.href='/candidatos/'">Candidatos</button>
       <button onclick="window.location.href='/avisos/'">Avisos</button>
+      <button onclick="window.location.href='/chat/professor/'" class="chat-btn">
+          Chat com Alunos
+          <span class="mensagens-nao-lidas" id="mensagens-nao-lidas"></span>
+      </button>
     </div>
     <div class="content">
       <div class="topbar">
