--- a/solidare/portal/templates/aluno.html
+++ b/solidare/portal/templates/aluno.html
@@ -131,6 +131,7 @@
       <button onclick="window.location.href='/calendario/'">Calendário</button>
       <button onclick="window.location.href='/avisos/'">Avisos</button>
       <button onclick="window.location.href='/chat/aluno/'">Chat</button>
+      <button onclick="window.location.href='/horario/'">Horário</button>
     </div>
     <div class="content">
       <div class="topbar">
